--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,21 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
-loader_version=0.14.24
+minecraft_version=1.21
+yarn_mappings=1.21+build.2
+loader_version=0.15.11
 
 # Mod Properties
 mod_name=resolutioncontrol
-mod_version=1.20.2-3.0.0
+mod_version=1.21-3.0.0
 maven_group=io.github.ultimateboomer
 archives_base_name=resolution-control-plus
 
 # Dependencies
 # https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api/
-fabric_version=0.90.4+1.20.2
+fabric_version=0.100.1+1.21
 #developer_mode_version=1.0.15
-mod_menu_version=8.0.0
+mod_menu_version=11.0.0-beta.2
 
 #Modrinth
 modrinth_id = rqTgDmc8
