--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,21 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.21
-yarn_mappings=1.21+build.2
-loader_version=0.15.11
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
+loader_version=0.16.5
 
 # Mod Properties
 mod_name=resolutioncontrol
-mod_version=1.21-3.0.0
+mod_version=1.21.1-3.0.0
 maven_group=io.github.ultimateboomer
 archives_base_name=resolution-control-plus
 
 # Dependencies
 # https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api/
-fabric_version=0.100.1+1.21
+fabric_version=0.105.0+1.21.1
 #developer_mode_version=1.0.15
-mod_menu_version=11.0.0-beta.2
+mod_menu_version=11.0.2
 
 #Modrinth
 modrinth_id = rqTgDmc8
